// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Collapse > Collapse accordionVue demo works fine 1`] = `
<div
  class="t-collapse t-collapse--default"
>
  
  
  <div
    class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
  >
    <div
      class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          
          折叠面板标题
          
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          
          <div
            class="t-collapse-panel__header-icon"
          >
            <svg
              class="t-icon t-icon-chevron-up"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-up"
              >
                <path
                  d="M17.5 14.5L12 9L6.5 14.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__body"
      style="grid-template-rows: 1fr;"
    >
      <div
        class="t-collapse-panel__inner"
      >
        <div
          class="t-collapse-panel__content"
        >
          
          <div
            class="content"
          >
             此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom"
  >
    <div
      class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          
          折叠面板标题
          
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          
          <div
            class="t-collapse-panel__header-icon"
          >
            <svg
              class="t-icon t-icon-chevron-down"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-down"
              >
                <path
                  d="M17.5 9.5L12 15L6.5 9.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__body"
      style="grid-template-rows: 0fr;"
    >
      <div
        class="t-collapse-panel__inner"
      >
        <div
          class="t-collapse-panel__content"
        >
          
          <div
            class="content"
          >
             此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom"
  >
    <div
      class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          
          折叠面板标题
          
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          
          <div
            class="t-collapse-panel__header-icon"
          >
            <svg
              class="t-icon t-icon-chevron-down"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-down"
              >
                <path
                  d="M17.5 9.5L12 15L6.5 9.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__body"
      style="grid-template-rows: 0fr;"
    >
      <div
        class="t-collapse-panel__inner"
      >
        <div
          class="t-collapse-panel__content"
        >
          
          <div
            class="content"
          >
             此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--disabled"
  >
    <div
      class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          
          折叠面板标题
          
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          
          <div
            class="t-collapse-panel__header-icon"
          >
            <svg
              class="t-icon t-icon-chevron-down"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-down"
              >
                <path
                  d="M17.5 9.5L12 15L6.5 9.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__body"
      style="grid-template-rows: 0fr;"
    >
      <div
        class="t-collapse-panel__inner"
      >
        <div
          class="t-collapse-panel__content"
        >
          
          <div
            class="content"
          >
             此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
          </div>
          
        </div>
      </div>
    </div>
  </div>
  
  
</div>
`;

exports[`Collapse > Collapse actionVue demo works fine 1`] = `
<div
  class="t-collapse t-collapse--default"
>
  
  <div
    class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
  >
    <div
      class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          
          折叠面板标题
          
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-cell__note"
      >
        
        收起
        
      </div>
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          
          <div
            class="t-collapse-panel__header-icon"
          >
            <svg
              class="t-icon t-icon-chevron-up"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-up"
              >
                <path
                  d="M17.5 14.5L12 9L6.5 14.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__body"
      style="grid-template-rows: 1fr;"
    >
      <div
        class="t-collapse-panel__inner"
      >
        <div
          class="t-collapse-panel__content"
        >
          
          <div
            class="content"
          >
             此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
          </div>
          
        </div>
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Collapse > Collapse baseVue demo works fine 1`] = `
<div
  class="t-collapse t-collapse--default"
>
  
  <div
    class="t-collapse-panel t-collapse-panel--bottom"
  >
    <div
      class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          
          折叠面板标题
          
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          
          <div
            class="t-collapse-panel__header-icon"
          >
            <svg
              class="t-icon t-icon-chevron-down"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-down"
              >
                <path
                  d="M17.5 9.5L12 15L6.5 9.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__body"
      style="grid-template-rows: 0fr;"
    >
      <div
        class="t-collapse-panel__inner"
      >
        <div
          class="t-collapse-panel__content"
        >
          
          <div
            class="content"
          >
             此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
          </div>
          
        </div>
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Collapse > Collapse cardVue demo works fine 1`] = `
<div
  class="t-collapse t-collapse--card"
>
  
  
  <div
    class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
  >
    <div
      class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          
          折叠面板标题
          
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          
          <div
            class="t-collapse-panel__header-icon"
          >
            <svg
              class="t-icon t-icon-chevron-up"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-up"
              >
                <path
                  d="M17.5 14.5L12 9L6.5 14.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__body"
      style="grid-template-rows: 1fr;"
    >
      <div
        class="t-collapse-panel__inner"
      >
        <div
          class="t-collapse-panel__content"
        >
          
          <div
            class="content"
          >
             此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom"
  >
    <div
      class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          
          折叠面板标题
          
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          
          <div
            class="t-collapse-panel__header-icon"
          >
            <svg
              class="t-icon t-icon-chevron-down"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-down"
              >
                <path
                  d="M17.5 9.5L12 15L6.5 9.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__body"
      style="grid-template-rows: 0fr;"
    >
      <div
        class="t-collapse-panel__inner"
      >
        <div
          class="t-collapse-panel__content"
        >
          
          <div
            class="content"
          >
             此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom"
  >
    <div
      class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          
          折叠面板标题
          
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          
          <div
            class="t-collapse-panel__header-icon"
          >
            <svg
              class="t-icon t-icon-chevron-down"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-down"
              >
                <path
                  d="M17.5 9.5L12 15L6.5 9.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__body"
      style="grid-template-rows: 0fr;"
    >
      <div
        class="t-collapse-panel__inner"
      >
        <div
          class="t-collapse-panel__content"
        >
          
          <div
            class="content"
          >
             此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--disabled"
  >
    <div
      class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          
          折叠面板标题
          
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          
          <div
            class="t-collapse-panel__header-icon"
          >
            <svg
              class="t-icon t-icon-chevron-down"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-down"
              >
                <path
                  d="M17.5 9.5L12 15L6.5 9.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__body"
      style="grid-template-rows: 0fr;"
    >
      <div
        class="t-collapse-panel__inner"
      >
        <div
          class="t-collapse-panel__content"
        >
          
          <div
            class="content"
          >
             此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
          </div>
          
        </div>
      </div>
    </div>
  </div>
  
  
</div>
`;

exports[`Collapse > Collapse mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Collapse 折叠面板
  </h1>
  <p
    class="summary"
  >
    可以折叠/展开的内容区域。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础折叠面板
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-collapse t-collapse--default"
      >
        
        <div
          class="t-collapse-panel t-collapse-panel--bottom"
        >
          <div
            class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                
                折叠面板标题
                
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                
                <div
                  class="t-collapse-panel__header-icon"
                >
                  <svg
                    class="t-icon t-icon-chevron-down"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g
                      id="chevron-down"
                    >
                      <path
                        d="M17.5 9.5L12 15L6.5 9.5"
                        id="stroke1"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__body"
            style="grid-template-rows: 0fr;"
          >
            <div
              class="t-collapse-panel__inner"
            >
              <div
                class="t-collapse-panel__content"
              >
                
                <div
                  class="content"
                >
                   此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
                </div>
                
              </div>
            </div>
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        向上展开
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-collapse t-collapse--default"
      >
        
        <div
          class="t-collapse-panel t-collapse-panel--top"
        >
          <div
            class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--top"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                
                折叠面板标题
                
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                
                <div
                  class="t-collapse-panel__header-icon"
                >
                  <svg
                    class="t-icon t-icon-chevron-up"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g
                      id="chevron-up"
                    >
                      <path
                        d="M17.5 14.5L12 9L6.5 14.5"
                        id="stroke1"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__body"
            style="grid-template-rows: 0fr;"
          >
            <div
              class="t-collapse-panel__inner"
            >
              <div
                class="t-collapse-panel__content"
              >
                
                 此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容 
                
              </div>
            </div>
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带操作说明
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-collapse t-collapse--default"
      >
        
        <div
          class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
        >
          <div
            class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                
                折叠面板标题
                
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-cell__note"
            >
              
              收起
              
            </div>
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                
                <div
                  class="t-collapse-panel__header-icon"
                >
                  <svg
                    class="t-icon t-icon-chevron-up"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g
                      id="chevron-up"
                    >
                      <path
                        d="M17.5 14.5L12 9L6.5 14.5"
                        id="stroke1"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__body"
            style="grid-template-rows: 1fr;"
          >
            <div
              class="t-collapse-panel__inner"
            >
              <div
                class="t-collapse-panel__content"
              >
                
                <div
                  class="content"
                >
                   此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
                </div>
                
              </div>
            </div>
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        手风琴式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-collapse t-collapse--default"
      >
        
        
        <div
          class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
        >
          <div
            class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                
                折叠面板标题
                
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                
                <div
                  class="t-collapse-panel__header-icon"
                >
                  <svg
                    class="t-icon t-icon-chevron-up"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g
                      id="chevron-up"
                    >
                      <path
                        d="M17.5 14.5L12 9L6.5 14.5"
                        id="stroke1"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__body"
            style="grid-template-rows: 1fr;"
          >
            <div
              class="t-collapse-panel__inner"
            >
              <div
                class="t-collapse-panel__content"
              >
                
                <div
                  class="content"
                >
                   此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom"
        >
          <div
            class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                
                折叠面板标题
                
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                
                <div
                  class="t-collapse-panel__header-icon"
                >
                  <svg
                    class="t-icon t-icon-chevron-down"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g
                      id="chevron-down"
                    >
                      <path
                        d="M17.5 9.5L12 15L6.5 9.5"
                        id="stroke1"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__body"
            style="grid-template-rows: 0fr;"
          >
            <div
              class="t-collapse-panel__inner"
            >
              <div
                class="t-collapse-panel__content"
              >
                
                <div
                  class="content"
                >
                   此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom"
        >
          <div
            class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                
                折叠面板标题
                
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                
                <div
                  class="t-collapse-panel__header-icon"
                >
                  <svg
                    class="t-icon t-icon-chevron-down"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g
                      id="chevron-down"
                    >
                      <path
                        d="M17.5 9.5L12 15L6.5 9.5"
                        id="stroke1"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__body"
            style="grid-template-rows: 0fr;"
          >
            <div
              class="t-collapse-panel__inner"
            >
              <div
                class="t-collapse-panel__content"
              >
                
                <div
                  class="content"
                >
                   此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--disabled"
        >
          <div
            class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                
                折叠面板标题
                
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                
                <div
                  class="t-collapse-panel__header-icon"
                >
                  <svg
                    class="t-icon t-icon-chevron-down"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g
                      id="chevron-down"
                    >
                      <path
                        d="M17.5 9.5L12 15L6.5 9.5"
                        id="stroke1"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__body"
            style="grid-template-rows: 0fr;"
          >
            <div
              class="t-collapse-panel__inner"
            >
              <div
                class="t-collapse-panel__content"
              >
                
                <div
                  class="content"
                >
                   此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
                </div>
                
              </div>
            </div>
          </div>
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        卡片折叠面板
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-collapse t-collapse--card"
      >
        
        
        <div
          class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--active"
        >
          <div
            class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom t-collapse-panel__header--expanded"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                
                折叠面板标题
                
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                
                <div
                  class="t-collapse-panel__header-icon"
                >
                  <svg
                    class="t-icon t-icon-chevron-up"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g
                      id="chevron-up"
                    >
                      <path
                        d="M17.5 14.5L12 9L6.5 14.5"
                        id="stroke1"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__body"
            style="grid-template-rows: 1fr;"
          >
            <div
              class="t-collapse-panel__inner"
            >
              <div
                class="t-collapse-panel__content"
              >
                
                <div
                  class="content"
                >
                   此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom"
        >
          <div
            class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                
                折叠面板标题
                
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                
                <div
                  class="t-collapse-panel__header-icon"
                >
                  <svg
                    class="t-icon t-icon-chevron-down"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g
                      id="chevron-down"
                    >
                      <path
                        d="M17.5 9.5L12 15L6.5 9.5"
                        id="stroke1"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__body"
            style="grid-template-rows: 0fr;"
          >
            <div
              class="t-collapse-panel__inner"
            >
              <div
                class="t-collapse-panel__content"
              >
                
                <div
                  class="content"
                >
                   此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom"
        >
          <div
            class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                
                折叠面板标题
                
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                
                <div
                  class="t-collapse-panel__header-icon"
                >
                  <svg
                    class="t-icon t-icon-chevron-down"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g
                      id="chevron-down"
                    >
                      <path
                        d="M17.5 9.5L12 15L6.5 9.5"
                        id="stroke1"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__body"
            style="grid-template-rows: 0fr;"
          >
            <div
              class="t-collapse-panel__inner"
            >
              <div
                class="t-collapse-panel__content"
              >
                
                <div
                  class="content"
                >
                   此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-collapse-panel t-collapse-panel--bottom t-collapse-panel--disabled"
        >
          <div
            class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--bottom"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                
                折叠面板标题
                
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                
                <div
                  class="t-collapse-panel__header-icon"
                >
                  <svg
                    class="t-icon t-icon-chevron-down"
                    fill="none"
                    height="1em"
                    style="fill: none;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g
                      id="chevron-down"
                    >
                      <path
                        d="M17.5 9.5L12 15L6.5 9.5"
                        id="stroke1"
                        stroke="currentColor"
                        stroke-linecap="square"
                        stroke-width="2"
                      />
                    </g>
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
          <div
            class="t-collapse-panel__body"
            style="grid-template-rows: 0fr;"
          >
            <div
              class="t-collapse-panel__inner"
            >
              <div
                class="t-collapse-panel__content"
              >
                
                <div
                  class="content"
                >
                   此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容可自定义内容 
                </div>
                
              </div>
            </div>
          </div>
        </div>
        
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Collapse > Collapse placementVue demo works fine 1`] = `
<div
  class="t-collapse t-collapse--default"
>
  
  <div
    class="t-collapse-panel t-collapse-panel--top"
  >
    <div
      class="t-cell t-collapse-panel__title t-collapse-panel__header t-collapse-panel__header--top"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          
          折叠面板标题
          
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          
          <div
            class="t-collapse-panel__header-icon"
          >
            <svg
              class="t-icon t-icon-chevron-up"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-up"
              >
                <path
                  d="M17.5 14.5L12 9L6.5 14.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="t-collapse-panel__body"
      style="grid-template-rows: 0fr;"
    >
      <div
        class="t-collapse-panel__inner"
      >
        <div
          class="t-collapse-panel__content"
        >
          
           此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容 
          
        </div>
      </div>
    </div>
  </div>
  
</div>
`;
